Fix font size and viewport size on mobile devices.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -52,6 +52,8 @@ nav {
       }
 
       a {
+        -webkit-text-size-adjust: 100%;
+        font-size: 1em;
         color: white;
         font-weight: 300;
         padding: 5px 5px;
