--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -56,6 +56,7 @@
     // width: 50%;
     width: 600px;
     margin: 0 auto 50px;
+    -webkit-text-size-adjust: 100%;
   }
 }
 
